Rename and some more styling.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <body>
         <div id="wrapper">
             <header>
-                <h1>Browser Capabilities</h1>
+                <h1>I can <span>haz</span> some ...</h1>
             </header>
             <div id="features"></div>
             <footer>
