--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
                 <h1>I can <span>haz</span> some ... ?</h1>
             </header>
             <div id="features"></div>
-            <footer id="footer">
+            <footer>
+                <div id="useragent"></div>
+                <p>Created by <a href="http://pb.io/">Philipp Bosch</a>. Powered by <a href="http://modernizr.com/">Modernizr 2</a>.</p>
             </footer>
         </div>
         <a href="http://github.com/philippbosch/haz"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://d3nwyuy0nl342s.cloudfront.net/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
@@ -32,7 +34,7 @@
                 </ul>
             </section>
         </script>
-        <script id="footer-template" type="text/x-handlebars-template">
+        <script id="useragent-template" type="text/x-handlebars-template">
             <p>Your browser goes by the name of<br />«{{useragent}}»</p>
         </script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
