--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>haz.io › HTML5 &amp; CSS3 Browser Capabilities</title>
         <link href="http://fonts.googleapis.com/css?family=Droid+Sans&amp;v1" media="screen, projection" rel="stylesheet" type="text/css" />
         <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-        <link href="/stylesheets/mobile.css" media="screen and (max-width: 768px)" rel="stylesheet" type="text/css" /> 
+        <link href="/stylesheets/mobile.css" media="screen and (max-width: 768px)" rel="stylesheet" type="text/css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
         <div id="wrapper">
@@ -18,7 +19,7 @@
                 <p>Created by <a href="http://pb.io/">Philipp Bosch</a>. Powered by <a href="http://modernizr.com/">Modernizr 2</a>.</p>
             </footer>
         </div>
-        <a href="http://github.com/philippbosch/haz"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://d3nwyuy0nl342s.cloudfront.net/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
+        <a href="http://github.com/philippbosch/haz" id="github-ribbon"><img src="https://d3nwyuy0nl342s.cloudfront.net/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
         <script id="section-template" type="text/x-handlebars-template">
             <section>
                 <header>
