Add Jdrop support.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </header>
             <div id="features"></div>
             <footer>
+                <button id="jdrop">Save to Jdrop</button>
                 <div id="useragent"></div>
                 <p>Created by <a href="http://pb.io/">Philipp Bosch</a>. Powered by <a href="http://modernizr.com/">Modernizr 2</a>.</p>
             </footer>
