--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </section>
         </script>
         <script id="useragent-template" type="text/x-handlebars-template">
-            <p>Your browser goes by the name of<br />«{{useragent}}»</p>
+            <p>Your browser: «{{useragent}}»</p>
         </script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
         <script src="https://github.com/downloads/wycats/handlebars.js/handlebars.1.0.0.beta.3.js"></script>
