--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>haz.io › HTML5 &amp; CSS3 Browser Capabilities</title>
         <link href="http://fonts.googleapis.com/css?family=Droid+Sans&amp;v1" media="screen, projection" rel="stylesheet" type="text/css" />
-        <link href="/stylesheets/screen.css?v=2" media="screen, projection" rel="stylesheet" type="text/css" />
-        <link href="/stylesheets/mobile.css?v=2" media="screen and (max-width: 768px)" rel="stylesheet" type="text/css" />
+        <link href="/stylesheets/screen.css?v=3" media="screen, projection" rel="stylesheet" type="text/css" />
+        <link href="/stylesheets/mobile.css?v=3" media="screen and (max-width: 768px)" rel="stylesheet" type="text/css" />
+        <link href="/stylesheets/wide.css?v=3" media="screen and (min-width: 1440px)" rel="stylesheet" type="text/css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
