Fix <script> markup.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <g:plusone size="medium" count="false" href="http://haz.io/"></g:plusone>
                     
                     <!-- Facebook -->
-                    <span id="fb-root"></span></script><fb:like href="http://haz.io/" send="false" width="49" height="20" show_faces="false" font="" layout="button_count" style="position: relative; top: -3px;"></fb:like>
+                    <span id="fb-root"></span><fb:like href="http://haz.io/" send="false" width="49" height="20" show_faces="false" font="" layout="button_count" style="position: relative; top: -3px;"></fb:like>
                 </div>
             </footer>
         </div>
@@ -73,7 +73,7 @@
         <!-- Badges -->
         <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
         <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-        <script src="http://connect.facebook.net/en_US/all.js#appId=237285156293779&amp;xfbml=1">
+        <script src="http://connect.facebook.net/en_US/all.js#appId=237285156293779&amp;xfbml=1"></script>
         
         <!-- Piwik --> 
         <script>
