--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link href="/stylesheets/mobile.css?v=1.3.1" media="screen and (max-width: 768px)" rel="stylesheet" type="text/css" />
         <link href="/stylesheets/wide.css?v=1.3.1" media="screen and (min-width: 1400px)" rel="stylesheet" type="text/css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!--[if lt IE 9]>
+            <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
     </head>
     <body>
         <div id="wrapper">
@@ -43,7 +46,7 @@
         </div>
         <a href="http://github.com/philippbosch/haz" id="github-ribbon"><img src="https://d3nwyuy0nl342s.cloudfront.net/img/7afbc8b248c68eb468279e8c17986ad46549fb71/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub"></a>
         <script id="section-template" type="text/x-handlebars-template">
-            <section>
+            <div class="group">
                 <header>
                     <h1>{{title}}</h1>
                 </header>
@@ -69,14 +72,14 @@
                         </li>
                     {{/each}}
                 </ul>
-            </section>
+            </div>
         </script>
         <script id="useragent-template" type="text/x-handlebars-template">
             <p>Your browser: «{{useragent}}»</p>
         </script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
         <script src="http://cloud.github.com/downloads/wycats/handlebars.js/handlebars.1.0.0.beta.3.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+        <script src="/javascripts/modernizr.js?v=2.0.6"></script>
         <script src="/javascripts/master.js?v=1.3.1"></script>
         
         <!-- Badges -->
