Explicitely define the URL to tweet.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div id="social">
                     <!-- twitter -->
                     <a href="http://twitter.com/haz_io" class="twitter-follow-button" data-button="blue" data-text-color="#FFFFFF" data-link-color="#FFFFFF" data-show-screen-name="false" data-show-count="false" data-width="61px">Follow @haz_io</a>
-                    <a href="http://twitter.com/share" class="twitter-share-button" data-count="compact" data-via="haz_io" data-width="80px">Tweet</a>
+                    <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://haz.io/" data-count="compact" data-via="haz_io" data-width="80px">Tweet</a>
                     
                     <!-- Google +1 -->
                     <g:plusone size="medium" count="true" href="http://haz.io/"></g:plusone>
