--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <body>
         <div id="wrapper">
             <header>
-                <h1>I can <span>haz</span> some ... ?</h1>
+                <h1><img src="/images/logo.png" alt="haz.io" id="logo" />
+                </h1>
             </header>
             <!--[if lt IE 7]>
                 <p class="info">Sorry, but haz.io does not support IE6 or lower.</p>
