Fix og:image meta tag.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="/stylesheets/mobile.css?v=1.4" media="screen and (max-width: 768px)" rel="stylesheet" type="text/css" />
         <link href="/stylesheets/wide.css?v=1.4" media="screen and (min-width: 1400px)" rel="stylesheet" type="text/css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta property="og:image" content="/images/teaser.png" />
+        <meta property="og:image" content="http://dev.haz.io/images/teaser.png" />
         <!--[if lt IE 9]>
             <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
