--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link href="/stylesheets/mobile.css?v=1.4" media="screen and (max-width: 768px)" rel="stylesheet" type="text/css" />
         <link href="/stylesheets/wide.css?v=1.4" media="screen and (min-width: 1400px)" rel="stylesheet" type="text/css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta property="og:title" content="haz.io › Check your browser's HTML5 and CSS3 capabilities" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://haz.io/" />
         <meta property="og:image" content="http://dev.haz.io/images/teaser.png" />
         <!--[if lt IE 9]>
             <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
