Use correct URL for OpenGraph meta tags.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta property="og:title" content="haz.io › Check your browser's HTML5 and CSS3 capabilities" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://dev.haz.io/" />
-        <meta property="og:image" content="http://dev.haz.io/images/teaser.png" />
+        <meta property="og:url" content="http://haz.io/" />
+        <meta property="og:image" content="http://haz.io/images/teaser.png" />
         <meta property="fb:admins" content="504430867" />
         <!--[if lt IE 9]>
             <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
