--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                                 {{else}}
                                     <span class="title">{{title}}</span>
                                 {{/if}}
-                                <abbr class="support" title="unknown">?</abbr>
+                                <span class="support">?</span>
                                 {{#if subfeatures}}
                                     <ul class="subfeatures">
                                         {{#each subfeatures}}
                                             <li class="feature {{name}}">
                                                 <span class="title">{{title}}</span>
-                                                <spap class="support">?</abbr>
+                                                <span class="support">?</span>
                                             </li>
                                         {{/each}}
                                     </ul>
