--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="wrapper">
             <header id="header">
                 <h1><img src="/images/logo.png" alt="haz.io" id="logo" /></h1>
-                <p>With the help of the awesome <a href="http://www.modernizr.com/">Modernizr</a> library, haz.io gives you a quick overview about your browser’s support for recent technologies in the world of HTML, CSS and Javascript.</p>
+                <p>With the help of the awesome <a href="http://www.modernizr.com/">Modernizr</a> library, haz.io gives you a quick overview of your browser’s support for recent technologies in the world of HTML, CSS and Javascript.</p>
             </header>
             <!--[if lt IE 7]>
                 <p class="info">Sorry, but haz.io does not support IE6 or lower.</p>
